# production-tool

./: .gitignore  Makefile  README.md  docker-compose.yaml
api/: Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/db/: departments.rs  mod.rs  product_orders.rs  products.rs  statuses.rs  user.rs  users.rs
backend/src/restapi/: departments.rs  errors.rs  mod.rs  product_orders.rs  products.rs  statuses.rs  users.rs
database/init/: a_database.sql  b_schema.sql  c_data.sql
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: Bar.vue  DeleteButton.vue  ThingTable.vue
frontend/src/pages/: index.vue
frontend/src/pages/departments/: CreateDepartmentDialog.vue  Departments.vue
frontend/src/pages/product_orders/: CreateProductOrderDialog.vue  ProductOrders.vue
frontend/src/pages/products/: CreateProductDialog.vue  Products.vue
frontend/src/pages/users/: CreateUserDialog.vue  Users.vue
frontend/src/plugins/: index.ts
frontend/src/queries/: DatabaseQueries.ts  DatabaseQuery.ts  databaseQuery.ts
frontend/src/router/: index.ts
frontend/src/stores/: backend.ts  backendApi.ts  message.ts  statusMessage.ts
frontend/src/types/: DatabaseTypes.ts  ThingTableTypes.ts  databaseTypes.ts
scripts/: build.sh  run.sh  stop.sh
