[package]
name = "pt-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
chrono = {version = "0.4.42", features = ["serde"]}
dotenv = "0.15.0"
serde = "1.0.228"
sqlx = {version = "0.8.6", features = ["mysql", "runtime-tokio", "chrono"]}
tokio = {version = "1.49.0", features = ["full"]}
